--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 
 <body>
     <h1>Mozilla is cool</h1>
-        <img src="images/그림1.jpg" width='200px' alt="우주">
-    
+        <a href="http://www.youtube.com"><img src="images/그림1.jpg" width='200px' alt="우주"></a>
         <p>At Mozilla, we’re a global community of</p>
     
         <ul> <!-- changed to list in the tutorial -->
