--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <h1>Mozilla is cool</h1>
         <a href="http://www.youtube.com"><img src="images/그림1.jpg" width='200px' alt="우주"></a>
+        <a href="HTMLtext.html"> HTMLTEXT</a>
         <p>At Mozilla, we’re a global community of</p>
     
         <ul> <!-- changed to list in the tutorial -->
