--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    Access-Control-Allow-Origin: null
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -13,7 +14,7 @@
 <body>
     <h1>Mozilla is cool</h1>
         <a href="http://www.youtube.com"><img src="images/그림1.jpg" width='200px' alt="우주"></a>
-        <a href="HTMLtext.html"> HTMLTEXT</a>
+        <a href="pages/Home.html"> HTMLTEXT</a>
         <p>At Mozilla, we’re a global community of</p>
     
         <ul> <!-- changed to list in the tutorial -->
@@ -26,6 +27,12 @@
     
         <p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a> to learn even more about the values and principles that guide the pursuit of our mission.</p>
         <button> Change</button>    
-    <script src="scripts/main.js"></script>  
+        <video crossorigin = "anonymous controls  preload="metadata">
+            <source src="videos/EuisooandJinoo.mp4" type="video/mp4">
+            <track kind="subtitles" src="subtitles/vtt/test-en.vtt" srclang="en"> 
+        </video>
+        <script src="scripts/main.js"></script>  
+
+
     </body>
 </html>
